# tcga-cancer-classification

./: .gitignore  README.md  data_processing.py  pyproject.toml  requirements.txt  setup.py  tcga_data_exploration.ipynb  tcga_data_exploration.py
hyperparameter_optimization/: tcga_hyperparameter_optimization_config.yaml
notebooks/: tcga-data-exploration.py  tcga-data-joining.py  tcga-data-preprocessing.py  tcga-model-interpretation.ipynb  tcga-model-interpretation.py  tcga-model-training.ipynb  tcga-model-training.py  tcga_data_exploration.ipynb  tcga_data_exploration.py  tcga_data_joining.ipynb  tcga_data_joining.py  tcga_data_preprocessing.ipynb  tcga_data_preprocessing.py
notebooks/sandbox/: models-dummy-tests.ipynb  models-dummy-tests.py
scripts/: Models.py  Tabular_Dataset.py
