[tool.poetry]
name = "tcga-cancer-classification"
version = "0.1.0"
description = "A deep learning approach to classify cancer type from TCGA data."
authors = ["André Ferreira <andrecnf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
torch = "^1.2"
pandas = "^0.25.1"
dask = "^2.4"
distributed = "^2.4"
tqdm = "^4.35"
comet-ml = "^2.0"
fsspec = "^0.4.4"
plotly = "^4.1"
configobj = "^5.0"
pixiedust = "^1.1"
matplotlib = "^3.1"
jinja2 = "^2.10"
fastparquet = "^0.3.2"
ray = "^0.8.1"
modin = "^0.7.0"
scikit-learn = "^0.22.1"
xgboost = "^0.90.0"
shap = "^0.34.0"
joblib = "^0.14.1"
data-utils = {git = "ssh://git@github.com:AndreCNF/data-utils.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
